...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/container_custom_app_bar_include_on_fragment_open_claim"
        layout="@layout/top_custom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider3_image_view"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/status_label_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#DE000000"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/status_icon_image_view"
                    app:layout_constraintEnd_toEndOf="@id/status_icon_image_view"
...
                            style="@style/card_label_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/insert_comment"
                            android:visibility="visible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/claim_comments_list_recycler_view" />

                        <ImageButton
                            android:id="@+id/add_comment_image_button"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/button_add_comment"
                            android:src="@drawable/ic_add"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/claim_comments_list_recycler_view" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <ImageButton
                    android:id="@+id/close_image_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@android:color/transparent"
...
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/comments_material_card_view" />

                <ImageButton
                    android:id="@+id/status_processing_image_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginBottom="24dp"
                    android:background="@android:color/transparent"
...
