...
            android:text="@string/claims"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filters_material_button"
            style="@style/materialButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            app:iconGravity="end"
            android:background="@android:color/transparent"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIncludedIds" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/all_claims_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="20dp"
        android:text="@string/all_claims"
        android:textAllCaps="true"
        android:textColor="@color/execution_priority_low"
        android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/all_claims_cards_block_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <ImageView
                android:id="@+id/empty_claim_list_image_view"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="empty_claim_list_image_view, empty_claim_list_text_view, claim_retry_material_button" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/claim_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/item_claim" />
        </androidx.constraintlayout.widget.ConstraintLayout>
...
