...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingHorizontal="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/comment_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/comment"
                    app:layout_constraintStart_toStartOf="parent"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/save"
                    android:text="@string/save"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/comment_text_input_layout" />

                <Button
                    android:id="@+id/cancel_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/cancel"
                    android:text="@string/cancel"
...
