...
            android:layout_height="wrap_content"
            android:text="@string/filtering"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/item_filter_open"
            style="@style/LargeBlackTextStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/open"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/claim_filter_dialog_title" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/item_filter_in_progress"
            style="@style/LargeBlackTextStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/in_progress"
...
            android:checked="false"
            android:text="@string/cancelled"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_filter_executed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/claim_list_filter_ok_material_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@android:string/ok" />

        <com.google.android.material.button.MaterialButton
...
